--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-Hi 
-hello world 
-i am a student in dacula high school and im a freshman 
+<H1> hello world 
+I am a student in dacula high school and im a freshman color:<green></green>
