--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <H1> hello world 
-I am a student in dacula high school and im a freshman color:<green></green>
+I am a student in dacula high school and im a freshman text color:<green></green>
