--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 # my name is Akul
 <H1> hello world 
-I am a student in dacula high school and im a freshman text color:<green></green>
+I am a student in dacula high school and im a freshman
