--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 # my name is Akul
-<H1> hello world 
-I am a student in dacula high school and im a freshman
+<h5> hello world 
+<p></p>I am a student in dacula high school and im a freshman
