--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 # my name is Akul
-<h5> hello world 
-<p></p>I am a student in dacula high school and im a freshman
+<h5> hello world </h5>
+<p>I am a student in dacula high school and im a freshman</p>
+<a href="https://github.com/AkulShinoch/AkulShinoch.github.io/blob/main/Interests.html"
